; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-stinger.c_stinger_video_render.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-stinger.c_stinger_video_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stinger_info = type { float, i32, i32 }

@OBS_TRANSITION_SOURCE_A = common dso_local global i32 0, align 4
@OBS_TRANSITION_SOURCE_B = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @stinger_video_render to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stinger_video_render(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.stinger_info*, align 8
  %6 = alloca float, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = bitcast i8* %15 to %struct.stinger_info*
  store %struct.stinger_info* %16, %struct.stinger_info** %5, align 8
  %17 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %18 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call float @obs_transition_get_time(i32 %19)
  store float %20, float* %6, align 4
  %21 = load float, float* %6, align 4
  %22 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %23 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %22, i32 0, i32 0
  %24 = load float, float* %23, align 4
  %25 = fcmp olt float %21, %24
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %2
  %30 = load i32, i32* @OBS_TRANSITION_SOURCE_A, align 4
  br label %33

31:                                               ; preds = %2
  %32 = load i32, i32* @OBS_TRANSITION_SOURCE_B, align 4
  br label %33

33:                                               ; preds = %31, %29
  %34 = phi i32 [ %30, %29 ], [ %32, %31 ]
  store i32 %34, i32* %8, align 4
  %35 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %36 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %8, align 4
  %39 = call i32 @obs_transition_video_render_direct(i32 %37, i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %33
  br label %87

42:                                               ; preds = %33
  %43 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %44 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %43, i32 0, i32 2
  %45 = load i32, i32* %44, align 4
  %46 = call i64 @obs_source_get_width(i32 %45)
  %47 = sitofp i64 %46 to float
  store float %47, float* %9, align 4
  %48 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %49 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %48, i32 0, i32 2
  %50 = load i32, i32* %49, align 4
  %51 = call i64 @obs_source_get_height(i32 %50)
  %52 = sitofp i64 %51 to float
  store float %52, float* %10, align 4
  %53 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %54 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = call i64 @obs_source_get_width(i32 %55)
  store i64 %56, i64* %11, align 8
  %57 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %58 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %57, i32 0, i32 1
  %59 = load i32, i32* %58, align 4
  %60 = call i64 @obs_source_get_height(i32 %59)
  store i64 %60, i64* %12, align 8
  %61 = load i64, i64* %11, align 8
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %66

63:                                               ; preds = %42
  %64 = load i64, i64* %12, align 8
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %67, label %66

66:                                               ; preds = %63, %42
  br label %87

67:                                               ; preds = %63
  %68 = load float, float* %9, align 4
  %69 = load i64, i64* %11, align 8
  %70 = sitofp i64 %69 to float
  %71 = fdiv float %68, %70
  store float %71, float* %13, align 4
  %72 = load float, float* %10, align 4
  %73 = load i64, i64* %12, align 8
  %74 = sitofp i64 %73 to float
  %75 = fdiv float %72, %74
  store float %75, float* %14, align 4
  %76 = call i32 (...) @gs_matrix_push()
  %77 = load float, float* %13, align 4
  %78 = load float, float* %14, align 4
  %79 = call i32 @gs_matrix_scale3f(float %77, float %78, float 1.000000e+00)
  %80 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %81 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %80, i32 0, i32 1
  %82 = load i32, i32* %81, align 4
  %83 = call i32 @obs_source_video_render(i32 %82)
  %84 = call i32 (...) @gs_matrix_pop()
  %85 = load i32*, i32** %4, align 8
  %86 = call i32 @UNUSED_PARAMETER(i32* %85)
  br label %87

87:                                               ; preds = %67, %66, %41
  ret void
}

declare dso_local float @obs_transition_get_time(i32) #1

declare dso_local i32 @obs_transition_video_render_direct(i32, i32) #1

declare dso_local i64 @obs_source_get_width(i32) #1

declare dso_local i64 @obs_source_get_height(i32) #1

declare dso_local i32 @gs_matrix_push(...) #1

declare dso_local i32 @gs_matrix_scale3f(float, float, float) #1

declare dso_local i32 @obs_source_video_render(i32) #1

declare dso_local i32 @gs_matrix_pop(...) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
